@@ -7,11 +7,11 @@ import com.rvque9.webshop.webshop.model.Category;
 import com.rvque9.webshop.webshop.model.Product;
 import com.rvque9.webshop.webshop.repository.CategoryRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.lang.NonNull;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Kategóriák üzleti logikáját kezelő szolgáltatás. Korábbi neve: GenreService.
@@ -29,11 +29,11 @@ public class CategoryService {
     public List<CategoryDTO> getAllCategories() {
         return categoryRepository.findAll().stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public CategoryDTO getCategoryById(Long id) {
-        Category category = categoryRepository.findById(id)
+    public CategoryDTO getCategoryById(@NonNull Long id) {
+        var category = categoryRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Kategória nem található ezzel az ID-val: " + id));
         return convertToDto(category);
     }
@@ -43,25 +43,25 @@ public class CategoryService {
         if (categoryRepository.findByNameIgnoreCase(categoryDTO.getName()).isPresent()) {
             throw new DuplicateResourceException("Kategória ezzel a névvel '" + categoryDTO.getName() + "' már létezik.");
         }
-        Category category = convertToEntity(categoryDTO);
-        Category savedCategory = categoryRepository.save(category);
+        var category = convertToEntity(categoryDTO);
+        var savedCategory = categoryRepository.save(category);
         return convertToDto(savedCategory);
     }
 
     @Transactional
-    public CategoryDTO updateCategory(Long id, CategoryDTO categoryDTO) {
-        Category existingCategory = categoryRepository.findById(id)
+    public CategoryDTO updateCategory(@NonNull Long id, CategoryDTO categoryDTO) {
+        var existingCategory = categoryRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Kategória nem található ezzel az ID-val: " + id));
 
         existingCategory.setName(categoryDTO.getName());
         existingCategory.setDescription(categoryDTO.getDescription());
 
-        Category updatedCategory = categoryRepository.save(existingCategory);
+        var updatedCategory = categoryRepository.save(existingCategory);
         return convertToDto(updatedCategory);
     }
 
     @Transactional
-    public void deleteCategory(Long id) {
+    public void deleteCategory(@NonNull Long id) {
         if (!categoryRepository.existsById(id)) {
             throw new ResourceNotFoundException("Kategória nem található ezzel az ID-val: " + id);
         }
@@ -79,22 +79,22 @@ public class CategoryService {
         }
         return categories.stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private CategoryDTO convertToDto(Category category) {
-        CategoryDTO dto = new CategoryDTO();
+        var dto = new CategoryDTO();
         dto.setId(category.getId());
         dto.setName(category.getName());
         dto.setDescription(category.getDescription());
         if (category.getProducts() != null) {
-            dto.setProductIds(category.getProducts().stream().map(Product::getId).collect(Collectors.toList()));
+            dto.setProductIds(category.getProducts().stream().map(Product::getId).toList());
         }
         return dto;
     }
 
     private Category convertToEntity(CategoryDTO categoryDTO) {
-        Category category = new Category();
+        var category = new Category();
         if (categoryDTO.getId() != null) {
             category.setId(categoryDTO.getId());
         }
